# lightrag-snkv

./: .env.example  .gitignore  README.md  docker-compose.yml  ingest_hn.py  lightrag-snkv-code-overview.md  pyproject.toml  server.py  test.py
.github/workflows/: ci.yml  publish.yml
bench/: config.py  dataset.py  llm_env.py  measure.py  report.py  run_all.py  stacks.py
lightrag_snkv/: __init__.py  hn_config.py  hn_fetcher.py  hn_ingestor.py  register.py  snkv_doc_status_impl.py  snkv_graph_impl.py  snkv_kv_impl.py  snkv_shared.py  snkv_vector_impl.py
tests/: conftest.py  test_snkv_doc_status.py  test_snkv_graph.py  test_snkv_kv.py  test_snkv_vector.py
tests/compat/: test_lightrag_graph_compat.py
tests/correctness/: test_answer_quality.py  test_consistency.py
tests/integration/: base_lightrag_test.py  llm_env.py  test_lightrag_faiss.py  test_lightrag_nano.py  test_lightrag_snkv.py
